ajouts des commentaires web externe

--- a/dmz/web/www/index.html
+++ b/dmz/web/www/index.html
@@ -1,10 +1,12 @@
 <! DOCTYPE html>
 <html lang = "fr">
+<!-- Page statique -->
 <head>
     <meta charset = "UTF-8">
     <title> site web b2b de Woodytoys </title>
 </head>
 <body>
+     <!-- titre statique -->
     <h1> site web statique de Woodytoys </h1>   
 </body>
 </html>
